--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1368,7 +1368,7 @@ hr {
     font-weight: 500;
     border: 1px solid #dfdfdf;
     border-radius: 4px;
-    margin: 0.5em 0;
+    margin: 0 0 0.5em 0;
     background-color: #ffffff;
 }
 
