--- a/views/partials/newreplyform.handlebars
+++ b/views/partials/newreplyform.handlebars
@@ -5,12 +5,20 @@
       <p><br></p>
     </div>
   </div>
+  <div class="link-form-cont"> {{! this is only here bc jquery applies display:block when it slides something down, which would break the below div if it slid down that}}
+    <div class="my-2 linkPreviewAddingForm">
+      <input type="text" class="form-control" name="linkPreviewUrlEntry" id="linkPreviewUrlEntry" placeholder="Enter a url..." />
+      <button class="btn btn-primary btn-fade ml-3 link-add">Yes, Please Add This Link He Is A Good Link</button>
+    </div>
+  </div>
   <div class="form-row my-2 card p-1 replyEmojiWindow" style="display:none">
     {{> emojilist }}
   </div>
   <div id="replyControlsRow" class="form-row mt-2 post-controls">
     <div class="leftSideControls">
-      <button type="button" class="btn btn-primary btn-fade" id="postImageButton"><i class="fas fa-image"></i></button><button type="button" class="btn btn-primary btn-fade replyEmojiWindowButton"><i class="far fa-smile"></i></button>
+      <button type="button" class="btn btn-primary btn-fade" id="postLinkButton"><i class="fas fa-link"></i></button>
+      <button type="button" class="btn btn-primary btn-fade" id="postImageButton"><i class="fas fa-image"></i></button>
+      <button type="button" class="btn btn-primary btn-fade replyEmojiWindowButton"><i class="far fa-smile"></i></button>
     </div>
     <div class="rightSideControls">
       <button type="submit" class="btn btn-primary btn-fade create-comment">Reply <i class="fas fa-chevron-right"></i></button>
