--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -9,7 +9,7 @@
   <div class="link-form-cont"> {{! this is only here bc jquery applies display:block when it slides something down, which would break the below div if it slid down that}}
     <div class="my-2 linkPreviewAddingForm">
       <input type="text" class="form-control" name="linkPreviewUrlEntry" id="linkPreviewUrlEntry" placeholder="Enter a url..." />
-      <button class="btn btn-primary btn-fade ml-3 link-add">Yes, Please Add This Link He Is A Good Link</button>
+      <button class="btn btn-primary btn-fade ml-3 link-add">Please Add This Link He Is A Good Link</button>
     </div>
   </div>
   <div class="form-row my-2 card p-1" id="emojiWindow" style="display:none">
